--- a/src/UI/index.html
+++ b/src/UI/index.html
@@ -1,1 +1,11 @@
+<div id="titlesBar">
+    <div class="titleInput" id="titleDivLeft">
+        <h1>Remote Note</h1>
+        <input id="titleLeft" value="First Title"/>
+    </div>
+    <div class="titleInput" id="titleDivRight">
+        <h1>Local Note</h1>
+        <input id="titleRight" value="Second Title"/>
+    </div>
+</div>
 <div id="conflictRes-Editor"></div>
