Titles now load correctly.

--- a/src/UI/index.html
+++ b/src/UI/index.html
@@ -1,7 +1,7 @@
 <div id="titlesBar">
     <div class="titleInput" id="titleDivLeft">
         <h1>Remote Note</h1>
-        <input id="titleLeft" value="First Title"/>
+        <input disabled id="titleLeft" value="First Title"/>
     </div>
     <div class="titleInput" id="titleDivRight">
         <h1>Local Note</h1>
