Changed to use native select element

--- a/src/ui/NoteSelectWindow/index.html
+++ b/src/ui/NoteSelectWindow/index.html
@@ -1,3 +1,4 @@
-<div id="autoComplete_wrapper">
-    <input id="autoComplete">
-</div>
+<form name="noteSelectForm">
+    <label for="noteSelect">Please select a note to compare with: </label>
+    <select name="noteSelect" id="noteSelect">
+</form>
