Progress in extracting Save button value.

--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -8,4 +8,7 @@
         <input id="titleRight" value="Second Title"/>
     </div>
 </div>
+<form>
+    <input type="hidden" name="noteContents" id="noteContents" value="tmp"/>
+</form>
 <div id="conflictRes-Editor"></div>
