Made DiffWIndow to return new title.

--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -9,6 +9,7 @@
     </div>
 </div>
 <form name="note">
-    <input type="hidden" name="noteContents" id="noteContents" value="tmp"/>
+    <input type="hidden" name="newNoteTitle" id="newNoteTitle" value=""/>
+    <input type="hidden" name="newNoteContents" id="newNoteContents" value=""/>
 </form>
 <div id="conflictRes-Editor"></div>
