--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -8,4 +8,8 @@
         <input id="titleRight" value="Second Title"/>
     </div>
 </div>
+<form name="note">
+    <input type="hidden" name="newNoteTitle" id="newNoteTitle" value=""/>
+    <input type="hidden" name="newNoteContents" id="newNoteContents" value=""/>
+</form>
 <div id="conflictRes-Editor"></div>
