Improve UI a little. (#9)
* Progress in improving the UI

* - Added a move title button.
- Added a header.
- Some UI changes.

--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -1,10 +1,15 @@
+<h1 id="dialogTitle">Conflict Resolution</h1>
+<p id="dialogSubtitle">Please review both notes and make the appropriate corrections in the Resolved Note. <strong>The Resolved Note is the one that will be saved.</strong></p>
 <div id="titlesBar">
     <div class="titleInput" id="titleDivLeft">
-        <h1>Remote Note</h1>
+        <h1>Conflict Note</h1>
         <input disabled id="titleLeft" value="First Title"/>
     </div>
+    <div id="moveTitleDiv">
+        <button id="moveTitleButton">→</button>
+    </div>
     <div class="titleInput" id="titleDivRight">
-        <h1>Local Note</h1>
+        <h1>Resolved Note</h1>
         <input id="titleRight" value="Second Title"/>
     </div>
 </div>
