Added action buttons to the editor.

--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -13,8 +13,14 @@
         <input id="titleRight" value="Second Title"/>
     </div>
 </div>
+<div id="buttonsList">
+    <button data-tooltip="Accept all changes"><i class="fas fa-angle-double-right"></i></button>
+    <button data-tooltip="Next Difference"><i class="fas fa-arrow-down"></i></button>
+    <button data-tooltip="Previous Difference"><i class="fas fa-arrow-up"></i></button>
+</div>
+<div id="conflictRes-Editor"></div>
+
 <form name="note">
     <input type="hidden" name="newNoteTitle" id="newNoteTitle" value=""/>
     <input type="hidden" name="newNoteContents" id="newNoteContents" value=""/>
 </form>
-<div id="conflictRes-Editor"></div>
