--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -6,7 +6,7 @@
         <input disabled id="titleLeft" value="First Title"/>
     </div>
     <div id="moveTitleDiv">
-        <button id="moveTitleButton">→</button>
+        <button id="moveTitleButton"><i class="fas fa-arrow-right"></i></button>
     </div>
     <div class="titleInput" id="titleDivRight">
         <h1>Resolved Note</h1>
@@ -14,9 +14,9 @@
     </div>
 </div>
 <div id="buttonsList">
-    <button data-tooltip="Accept all changes"><i class="fas fa-angle-double-right"></i></button>
-    <button data-tooltip="Next Difference"><i class="fas fa-arrow-down"></i></button>
-    <button data-tooltip="Previous Difference"><i class="fas fa-arrow-up"></i></button>
+    <button title="Accept all changes" id="acceptAllButton"><i class="fas fa-angle-double-right"></i></button>
+    <button title="Next Difference" id="nextDiffButton"><i class="fas fa-arrow-down"></i></button>
+    <button title="Previous Difference" id="prevDiffButton"><i class="fas fa-arrow-up"></i></button>
 </div>
 <div id="conflictRes-Editor"></div>
 
