--- a/src/ui/DiffWindow/index.html
+++ b/src/ui/DiffWindow/index.html
@@ -14,9 +14,16 @@
     </div>
 </div>
 <div id="buttonsList">
-    <button title="Accept all changes" id="acceptAllButton"><i class="fas fa-angle-double-right"></i></button>
-    <button title="Next Difference" id="nextDiffButton"><i class="fas fa-arrow-down"></i></button>
-    <button title="Previous Difference" id="prevDiffButton"><i class="fas fa-arrow-up"></i></button>
+    <div>
+        <button title="Collapse unchanged lines" id="collapseButton"><i class = "fas fa-compress-alt"></i></button>
+        <button title="Align changed segments horizontally" id="alignButton"><i class = "fas fa-arrows-alt-h"></i></button>
+        <button title="Wrap long lines" id="wrapLinesButton"><i class = "fas fa-level-down-alt"></i></button>
+    </div>
+    <div>
+        <button title="Accept all changes" id="acceptAllButton"><i class="fas fa-angle-double-right"></i></button>
+        <button title="Next Difference" id="nextDiffButton"><i class="fas fa-arrow-down"></i></button>
+        <button title="Previous Difference" id="prevDiffButton"><i class="fas fa-arrow-up"></i></button>
+    </div>
 </div>
 <div id="conflictRes-Editor"></div>
 
